# rusty-requester

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  SECURITY.md  install.sh  readme.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  FEATURES.md  GIT_WORKSPACE_FORMAT.md  index.html  latest.json  usage.html
scripts/: deploy.sh  generate_dmg_bg.py  generate_icon.py  generate_readme_demo.py  make_dmg.sh
src/: actions.rs  assertion.rs  backup.rs  cookies.rs  curl.rs  diff.rs  env_compare.rs  extract.rs  html_preview.rs  icon.rs  io.rs  macos_menu.rs  main.rs  model.rs  net.rs  oauth.rs  privacy.rs  runner.rs  runner_detail.rs  secret_scanner.rs  snippet.rs  sse.rs  theme.rs  widgets.rs
src/io/: curl.rs  git_workspace.rs  mod.rs
src/sync/: apply.rs  git.rs  job.rs  mod.rs
src/ui/: collection_settings.rs  editor.rs  mod.rs  modals.rs  response.rs  settings.rs  sidebar.rs  sync.rs
src/ui/modals/: about.rs  backup_modal.rs  env.rs  menu.rs  palette.rs  paste.rs  runner_modal.rs  save_draft.rs  snippet.rs  toast.rs  update.rs
