[package]
name = "rusty-requester"
version = "0.2.1"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
poll-promise = "0.3"
base64 = "0.22"
serde_yaml = "0.9"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
