[package]
name = "rusty-requester"
version = "0.4.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
poll-promise = "0.3"
base64 = "0.22"
serde_yaml = "0.9"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
# Native NSMenu-backed menu bar — drops a system menu on the top of
# the screen (the macOS-idiomatic place) instead of rendering one
# inside the window. Linux keeps the in-window egui menu bar.
muda = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# The `objc` 0.2 crate's macros (`class!`, `msg_send!`, `sel_impl`)
# expand a legacy `#[cfg(feature = "cargo-clippy")]` attribute into
# our crate, which newer rustc flags as an unexpected-cfg warning.
# Whitelist the cfg so builds are quiet without silencing real typos.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(feature, values(\"cargo-clippy\"))",
] }
